model update with undefined dict instead of string + openapi spec updaet
