# src/pydantic_model/api_model.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  gcp_datastore_lookup_api.yaml
-#   timestamp: 2024-06-01T15:28:55+00:00
+#   timestamp: 2024-06-01T16:20:29+00:00
 
 from __future__ import annotations
 
@@ -12,24 +12,17 @@ from pydantic import BaseModel, Field
 class DatastoreEntityRequest(BaseModel):
     datastore_namespace: Optional[str] = Field(None, example='customer_store')
     datastore_kind: Optional[str] = Field(None, example='customer_data_latest_apr')
-    datastore_query: Optional[str] = Field(
-        None, example="{'account_id': 'x', 'postcode': 'AB1 CD2', 'first_name': 'John'}"
-    )
+    datastore_query: Optional[Dict[str, Any]] = None
 
 
 class DatastoreEntityMultipleRequest(BaseModel):
     datastore_namespace: Optional[str] = Field(None, example='customer_store')
     datastore_kind: Optional[str] = Field(None, example='customer_data_latest_apr')
-    datastore_query: Optional[str] = Field(
-        None, example="{'account_id': 'x', 'postcode': 'AB1 CD2', 'first_name': 'John'}"
-    )
+    datastore_query: Optional[Dict[str, Any]] = None
 
 
 class DatastoreEntityResponse(BaseModel):
-    json_string_response_entity: Optional[str] = Field(
-        None,
-        example="{'account_id': 'x', 'insertion_timestamp': '2024-04-25T11:11:55Z'}",
-    )
+    entity: Optional[Dict[str, Any]] = None
 
 
 class DatastoreEntityMultipleResponse(BaseModel):
